--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <h1>Olá, mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae rerum provident voluptatum magnam, nobis culpa perspiciatis tenetur atque tempore odio, assumenda amet quasi optio tempora architecto hic distinctio voluptas.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil quas, quis a animi tempore ipsam distinctio sequi maiores necessitatibus odio reprehenderit similique possimus illo enim magni excepturi! Nihil, quasi beatae.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam libero ut aut enim, nulla quisquam facere consectetur! Dolores eos aperiam in quasi consectetur laudantium, animi neque, fuga nam possimus accusamus!</p>
 </body>
 </html>
